<resources>
    <string name="app_name">AppGasEta</string>
    <string name="txt_titulo">Gasolina x Etanol</string>
    <string name="txt_hint_gasolina">R$ Gasolina</string>
    <string name="txt_hint_etanol">R$ Etanol</string>
    <string name="txt_hint_nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="txt_hint_telefone_de_contato">Telefone de Contato</string>
    <string name="txt_button_calcular">CALCULAR</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
    <string name="txt_resultado">RESULTADO</string>
</resources>